--- a/app/views/links/new.erb
+++ b/app/views/links/new.erb
@@ -1,15 +1,17 @@
-<form action="/links/saving" method="post">
-  <div>
+<h1> New Link </h1>
+
+<form action='/links/saving' method='POST'>
+  <label for='title'>
     Title:
-    <input type="text" name="title"/>
-  </div>
-  <div>
+    <input type='text' name='title'/>
+  </label>
+  <label for='url'>
     URL:
-    <input type="text" name="url"/>
-  </div>
-  <div>
-    tag:
-    <input type="text" name="tags"/>
-  </div>
+    <input type='text' name='url'/>
+  </label>
+  <label for='tag'>
+    Tag:
+    <input type='text' name='tag'/>
+  </label>
   <button type="submit"> Create link</button>
 </form>
